// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsRouterForm helpers extractGroups should extract groups from the exits of a groupsRouter node 1`] = `
Object {
  "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
  "name": "Customers",
  "type": "group",
}
`;

exports[`GroupsRouterForm helpers extractGroups should extract groups from the exits of a groupsRouter node 2`] = `
Object {
  "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
  "name": "Unsatisfied Customers",
  "type": "group",
}
`;

exports[`GroupsRouterForm helpers extractGroups should extract groups from the exits of a groupsRouter node 3`] = `
Object {
  "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
  "name": "Early Adopters",
  "type": "group",
}
`;

exports[`GroupsRouterForm helpers extractGroups should extract groups from the exits of a groupsRouter node 4`] = `
Object {
  "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
  "name": "Testers",
  "type": "group",
}
`;

exports[`GroupsRouterForm helpers extractGroups should extract groups from the exits of a groupsRouter node 5`] = `
Object {
  "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
  "name": "Subscribers",
  "type": "group",
}
`;

exports[`GroupsRouterForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "disabled": false,
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="split_by_groups"
  title="Split by Group Membership"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "description": "Split by group membership",
        "form": undefined,
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Split by Group Membership",
        "type": "split_by_groups",
      }
    }
    onChange={[MockFunction]}
  />
  <p>
    Select the group(s) you'd like to split by below
  </p>
  <AssetSelector
    entry={
      Object {
        "value": Array [
          Object {
            "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
            "name": "Customers",
            "type": "group",
          },
          Object {
            "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
            "name": "Unsatisfied Customers",
            "type": "group",
          },
          Object {
            "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
            "name": "Early Adopters",
            "type": "group",
          },
          Object {
            "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
            "name": "Testers",
            "type": "group",
          },
          Object {
            "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
            "name": "Subscribers",
            "type": "group",
          },
        ],
      }
    }
    multi={true}
    name="Groups"
    onChange={[Function]}
    searchable={true}
  />
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @run.results.whatever_the_name_is"
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "",
      }
    }
  />
</Dialog>
`;

exports[`GroupsRouterForm updates should update and save 1`] = `
Object {
  "groups": Object {
    "validationFailures": Array [],
    "value": Array [
      Object {
        "id": "68223118-109f-442a-aed3-7bb3e1eab687",
        "name": "Subscriber",
        "type": "group",
      },
    ],
  },
  "resultName": Object {
    "value": "My Group Result",
  },
  "valid": true,
}
`;

exports[`GroupsRouterForm updates should update and save 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": "Subscriber",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
        Object {
          "destination_node_uuid": null,
          "name": "Other",
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "68223118-109f-442a-aed3-7bb3e1eab687",
            ],
            "exit_uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
            "type": "has_group",
            "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
          },
        ],
        "default_exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        "operand": "@contact.groups",
        "result_name": "My Group Result",
        "type": "switch",
      },
      "uuid": "c51231fa-5efd-416a-abe9-d5aedbfe33e4",
      "wait": Object {
        "type": "group",
      },
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_groups",
    },
  },
]
`;
